--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<td width = "765" align="center">
 			   <img src="images/cover.jpg" width="763" height="460" usemap="#cover" border="0" align="center">		
 				<map name="cover">
-					<area shape="rect" coords="426,424,50,398" href="mpbcweb.html">
+					<area shape="rect" coords="426,424,50,398" href="lareserv.html">
 					<area shape="rect" coords="705,166,422,145" href="lareserv.html">
 				</map>
 			</td>			
