got rid of old index and index-2

--- a/brokerageleasing.html
+++ b/brokerageleasing.html
@@ -127,7 +127,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <tr bgcolor="#FFFFFF">
     <td width="10" bgcolor="#FFFFFF">&nbsp;</td>
     <td width="1" bgcolor="#FFFFFF">&nbsp;</td>
-    <td width="552" bgcolor="#FFFFFF"><div align="left"><a href="index-2.html"><img src="images/lareslogo.jpg" width="258" height="125" border="0"></a></div></td>
+    <td width="552" bgcolor="#FFFFFF"><div align="left"><a href="index.html"><img src="images/lareslogo.jpg" width="258" height="125" border="0"></a></div></td>
     <td width="195" bgcolor="#FFFFFF"><h1 class="expanded">Contact</h1>      
       <span class="medium">3825 Gilbert Drive<br>
 Shreveport, Louisiana 71104<br>
