--- a/development.html
+++ b/development.html
@@ -126,7 +126,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <tr bgcolor="#FFFFFF">
     <td colspan="2" bgcolor="#FFFFFF">&nbsp;</td>
     <td width="1" bgcolor="#FFFFFF">&nbsp;</td>
-    <td width="370" bgcolor="#FFFFFF"><a href="index-2.html"><img src="images/lareslogo.jpg" width="258" height="125" border="0"></a></td>
+    <td width="370" bgcolor="#FFFFFF"><a href="index.html"><img src="images/lareslogo.jpg" width="258" height="125" border="0"></a></td>
     <td width="135" bgcolor="#FFFFFF">&nbsp;</td>
     <td width="236" bgcolor="#FFFFFF"><h1 class="expanded">Contact</h1>      
       <span class="medium">3825 Gilbert Drive<br>
