--- a/index.html
+++ b/index.html
@@ -1,55 +1,179 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
- 
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
- 
-	<meta name="description" content="Madison Park Buisness and Store, Shreveport Louisiana, Louisiana Real Estate">
-	<META name="keywords" content="office space, office for rent, rent, secretarial services,
-	 apartments for rent, apartments, storage, storage space, storage space for rent, storage for rent, Louisiana
-	 Real Estate Services, Madison Par Buisiness Center">
- 
-	<title>LA Real Estate Services & Madison Park Business Center</title>
+<!-- TemplateBeginEditable name="doctitle" -->
+<title>Louisiana Real Estate Services, LLC</title>
+<!-- TemplateEndEditable --><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- TemplateBeginEditable name="head" --><!-- TemplateEndEditable -->
+<style type="text/css">
+<!--
+body,td,th {
+	font-family: Garamond;
+	font-size: 10px;
+	color: 664E88;
+}
+body {
+	background-color: #CCCCCC;
+	margin-left: 50px;
+	margin-top: 75px;
+	margin-right: 50px;
+	margin-bottom: 50px;
+	background-image: url();
+}
+a {
+	font-size: 10px;
+	color: F7B042;
+}
+a:link {
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+	color: #999999;
+}
+a:hover {
+	text-decoration: underline;
+	color: F7B042;
+}
+a:active {
+	text-decoration: none;
+	color: F7B042;
+}
+h1,h2,h3,h4,h5,h6 {
+	font-weight: bold;
+}
+h1 {
+	font-size: 18px;
+	color: 664e88;
+}
+h2 {
+	font-size: 14px;
+	color: 664e88;
+}
+h3 {
+	font-size: 12px;
+	color: 664e88;
+}
+h4 {
+	font-size: 10px;
+	color: 664e88;
+}
+.style1 {color: #FFFFFF}
+-->
+</style>
+<script language="JavaScript" type="text/JavaScript">
+<!--
+
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_nbGroup(event, grpName) { //v6.0
+  var i,img,nbArr,args=MM_nbGroup.arguments;
+  if (event == "init" && args.length > 2) {
+    if ((img = MM_findObj(args[2])) != null && !img.MM_init) {
+      img.MM_init = true; img.MM_up = args[3]; img.MM_dn = img.src;
+      if ((nbArr = document[grpName]) == null) nbArr = document[grpName] = new Array();
+      nbArr[nbArr.length] = img;
+      for (i=4; i < args.length-1; i+=2) if ((img = MM_findObj(args[i])) != null) {
+        if (!img.MM_up) img.MM_up = img.src;
+        img.src = img.MM_dn = args[i+1];
+        nbArr[nbArr.length] = img;
+    } }
+  } else if (event == "over") {
+    document.MM_nbOver = nbArr = new Array();
+    for (i=1; i < args.length-1; i+=3) if ((img = MM_findObj(args[i])) != null) {
+      if (!img.MM_up) img.MM_up = img.src;
+      img.src = (img.MM_dn && args[i+2]) ? args[i+2] : ((args[i+1])? args[i+1] : img.MM_up);
+      nbArr[nbArr.length] = img;
+    }
+  } else if (event == "out" ) {
+    for (i=0; i < document.MM_nbOver.length; i++) {
+      img = document.MM_nbOver[i]; img.src = (img.MM_dn) ? img.MM_dn : img.MM_up; }
+  } else if (event == "down") {
+    nbArr = document[grpName];
+    if (nbArr)
+      for (i=0; i < nbArr.length; i++) { img=nbArr[i]; img.src = img.MM_up; img.MM_dn = 0; }
+    document[grpName] = nbArr = new Array();
+    for (i=2; i < args.length-1; i+=2) if ((img = MM_findObj(args[i])) != null) {
+      if (!img.MM_up) img.MM_up = img.src;
+      img.src = img.MM_dn = (args[i+1])? args[i+1] : img.MM_up;
+      nbArr[nbArr.length] = img;
+  } }
+}
+
+function MM_openBrWindow(theURL,winName,features) { //v2.0
+  window.open(theURL,winName,features);
+}
+//-->
+</script>
+<link href="CSS/Level2_Arial_Text.css" rel="stylesheet" type="text/css">
 </head>
- 
-<body bgcolor="#000000"
-	  text="#664E88">
-	  
-	  
-<table align="center" 
-	   bgcolor="#FFFFFF"
-	   border="0"
-	   frame="void"
-	   rules="all"
-	   width="765">
- 
- 
-		<tr align="center valign="middle">
- 
-			<td width = "765" align="center">
-			   <img src="images/cover.jpg" width="763" height="460" usemap="#cover" border="0" align="center">		
-				<map name="cover">
-					<area shape="rect" coords="426,424,50,398" href="lareserv.html">
-					<area shape="rect" coords="705,166,422,145" href="lareserv.html">
-				</map>
-			</td>			
- 
-		</tr>
-		<tr>
-			<td  width="765" height="10" bgcolor="FFFFFF">
-			&nbsp;
-			</td>
-		</tr>
-		<tr>
-			<td  width="765" height="10" bgcolor="FFFFFF" align="center">
-			<font size="1" face="Arial", "Times New Roman" color="#664E88">
-			Copyright &copy; 2010-2011 Louisiana Real Estate Services, LLC & Madison Park Business and Storage Center
-			</font>
-			</td>
-		</tr>
- 
-	
+
+<body onLoad="MM_preloadImages('images/aboutusyellow.jpg','images/propmanageyellow.jpg','images/brokerageyellow.jpg','images/developmentyellow.jpg','images/investment-servicesyellow.jpg')">
+<table width="795" border="0" align="center" cellpadding="3" cellspacing="0" bgcolor="#FFFFFF">
+  <tr bgcolor="#FFFFFF">
+    <td colspan="2" bgcolor="#FFFFFF">&nbsp;</td>
+    <td width="1" bgcolor="#FFFFFF">&nbsp;</td>
+    <td width="355" bgcolor="#FFFFFF"><a href="index.html"><img src="images/lareslogo.jpg" width="258" height="125" border="0"></a></td>
+    <td width="136" bgcolor="#FFFFFF">&nbsp;</td>
+    <td width="244" bgcolor="#FFFFFF"><h1 class="expanded">Contact</h1>      
+      <span class="medium">3825 Gilbert Drive<br>
+Shreveport, Louisiana 71104<br>
+phone 318.861.5999<br>
+fax 318.861.5989</span><br>
+email <a href="mailto:jeff@lareservices.com"><font color="#664E88">jeff@lareservices.com</font></a> </td>
+  </tr>
+  <tr>
+    <td colspan="7"><table border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td bordercolor="664e88" bgcolor="664e88"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','about','images/aboutusyellow.jpg',1)" onMouseOver="MM_nbGroup('over','about','images/aboutusyellow.jpg','images/aboutusyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/aboutusyellow.jpg" alt="About Louisiana Real Estate Services" name="about" border="0" onload=""></a></td>
+          <td><a href="propertymanagement.html" target="_top" onClick="MM_nbGroup('down','group1','propmanage','images/propmanageyellow.jpg',1)" onMouseOver="MM_nbGroup('over','propmanage','images/propmanageyellow.jpg','images/propmanageyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/propmanagewhite.jpg" alt="Property Management by Louisiana Real Estate Services" name="propmanage" width="155" height="32" border="0" onload=""></a></td>
+          <td><a href="brokerageleasing.html" target="_top" onClick="MM_nbGroup('down','group1','brokerage','images/brokerageyellow.jpg',1)" onMouseOver="MM_nbGroup('over','brokerage','images/brokerageyellow.jpg','images/brokerageyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/brokeragewhite.jpg" alt="Brokerage & Leasing by Louisiana Real Estate Services" name="brokerage" width="153" height="32" border="0" onload=""></a></td>
+          <td><a href="development.html" target="_top" onClick="MM_nbGroup('down','group1','development','images/developmentyellow.jpg',1)" onMouseOver="MM_nbGroup('over','development','images/developmentyellow.jpg','images/developmentyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/development.jpg" alt="Development by Louisiana Real Estate Services" name="development" width="111" height="32" border="0" onload=""></a></td>
+          <td><a href="investment.html" target="_top" onClick="MM_nbGroup('down','group1','investment','images/investment-servicesyellow.jpg',1)" onMouseOver="MM_nbGroup('over','investment','images/investment-servicesyellow.jpg','images/investment-servicesyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/investment-serviceswhite.jpg" alt="Investment Services by Louisiana Real Estate Services" name="investment" width="146" height="32" border="0" onload=""></a></td>
+          <td><a href="javascript:;" onClick="MM_openBrWindow('http://www.lacdb.com/','','toolbar=yes,location=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=600')"><img src="images/propertylistings.jpg" alt="Property Listings with Louisiana Real Estate Services" name="proplistings" width="129" height="32" border="0"></a></td>
+        </tr>
+    </table></td>
+  </tr>
+  <tr bgcolor="#FFFFFF">
+    <td width="1" height="26"><img src="images/breakspace.gif" width="10" height="8"><br>
+    <br></td>
+    <td height="26" colspan="5"><br>
+      <strong>Welcome to Louisiana Real Estate Services, LLC.</strong><br>
+      <br>
+LRES is a multi-disciplined firm based in Louisiana focusing on development,  management, sales and leasing of investment real estate.<br>
+<br>
+LRES is owned and operated by Jeffrey Dunman, CPM, CCIM, SIOR. Mr. Dunman's professional real estate accomplishments include sourcing, underwriting, managing and closing more than 40 investment property acquisitions and developments totaling in excess of $320 million with individual deal sizes ranging between $2 million and $66 million.<br>
+<br>
+For more information about LRES, please contact us.<br>
+<br> 
+Thank you in advance for your consideration,
+<br>
+Jeff<br>
+<br><br>    </td>
+    <td width="1" height="26"><img src="images/breakspace.gif" width="8" height="8"></td>
+  </tr>
+  <tr bgcolor="F7B042">
+    <td colspan="7">&nbsp;</td>
+  </tr>
+  <tr bgcolor="#664e88">
+    <td colspan="7"><div align="center"><span class="expanded style1">Copyright &copy;2007-2009 Louisiana Real Estate Services, LLC </span></div></td>
+  </tr>
+  <tr bgcolor="#FFFFFF">
+    <td colspan="7"><div align="center"><a href="index.html">about us</a> | <a href="propertymanagement.html">property management</a> | <a href="brokerageleasing.html">brokerage and leasing</a> | <a href="development.html">development</a> | <a href="investment.html">investment services</a> | <a href="javascript:;" onClick="MM_openBrWindow('http://www.lacdb.com/','','toolbar=yes,location=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=600')">property listings</a> </div></td>
+  </tr>
 </table>
 </body>
 </html>
- 
-
