--- a/lareserv.html
+++ b/lareserv.html
@@ -126,7 +126,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <tr bgcolor="#FFFFFF">
     <td colspan="2" bgcolor="#FFFFFF">&nbsp;</td>
     <td width="1" bgcolor="#FFFFFF">&nbsp;</td>
-    <td width="355" bgcolor="#FFFFFF"><a href="index-2.html"><img src="images/lareslogo.jpg" width="258" height="125" border="0"></a></td>
+    <td width="355" bgcolor="#FFFFFF"><a href="index.html"><img src="images/lareslogo.jpg" width="258" height="125" border="0"></a></td>
     <td width="136" bgcolor="#FFFFFF">&nbsp;</td>
     <td width="244" bgcolor="#FFFFFF"><h1 class="expanded">Contact</h1>      
       <span class="medium">3825 Gilbert Drive<br>
@@ -138,7 +138,7 @@ email <a href="mailto:jeff@lareservices.com"><font color="#664E88">jeff@lareserv
   <tr>
     <td colspan="7"><table border="0" cellpadding="0" cellspacing="0">
         <tr>
-          <td bordercolor="664e88" bgcolor="664e88"><a href="index-2.html" target="_top" onClick="MM_nbGroup('down','group1','about','images/aboutusyellow.jpg',1)" onMouseOver="MM_nbGroup('over','about','images/aboutusyellow.jpg','images/aboutusyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/aboutusyellow.jpg" alt="About Louisiana Real Estate Services" name="about" border="0" onload=""></a></td>
+          <td bordercolor="664e88" bgcolor="664e88"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','about','images/aboutusyellow.jpg',1)" onMouseOver="MM_nbGroup('over','about','images/aboutusyellow.jpg','images/aboutusyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/aboutusyellow.jpg" alt="About Louisiana Real Estate Services" name="about" border="0" onload=""></a></td>
           <td><a href="propertymanagement.html" target="_top" onClick="MM_nbGroup('down','group1','propmanage','images/propmanageyellow.jpg',1)" onMouseOver="MM_nbGroup('over','propmanage','images/propmanageyellow.jpg','images/propmanageyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/propmanagewhite.jpg" alt="Property Management by Louisiana Real Estate Services" name="propmanage" width="155" height="32" border="0" onload=""></a></td>
           <td><a href="brokerageleasing.html" target="_top" onClick="MM_nbGroup('down','group1','brokerage','images/brokerageyellow.jpg',1)" onMouseOver="MM_nbGroup('over','brokerage','images/brokerageyellow.jpg','images/brokerageyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/brokeragewhite.jpg" alt="Brokerage & Leasing by Louisiana Real Estate Services" name="brokerage" width="153" height="32" border="0" onload=""></a></td>
           <td><a href="development.html" target="_top" onClick="MM_nbGroup('down','group1','development','images/developmentyellow.jpg',1)" onMouseOver="MM_nbGroup('over','development','images/developmentyellow.jpg','images/developmentyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/development.jpg" alt="Development by Louisiana Real Estate Services" name="development" width="111" height="32" border="0" onload=""></a></td>
@@ -172,7 +172,7 @@ Jeff<br>
     <td colspan="7"><div align="center"><span class="expanded style1">Copyright &copy;2007-2009 Louisiana Real Estate Services, LLC </span></div></td>
   </tr>
   <tr bgcolor="#FFFFFF">
-    <td colspan="7"><div align="center"><a href="index-2.html">about us</a> | <a href="propertymanagement.html">property management</a> | <a href="brokerageleasing.html">brokerage and leasing</a> | <a href="development.html">development</a> | <a href="investment.html">investment services</a> | <a href="javascript:;" onClick="MM_openBrWindow('http://www.lacdb.com/','','toolbar=yes,location=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=600')">property listings</a> </div></td>
+    <td colspan="7"><div align="center"><a href="index.html">about us</a> | <a href="propertymanagement.html">property management</a> | <a href="brokerageleasing.html">brokerage and leasing</a> | <a href="development.html">development</a> | <a href="investment.html">investment services</a> | <a href="javascript:;" onClick="MM_openBrWindow('http://www.lacdb.com/','','toolbar=yes,location=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=600')">property listings</a> </div></td>
   </tr>
 </table>
 </body>
