removed about us links and updated the copyright date

--- a/brokerageleasing.html
+++ b/brokerageleasing.html
@@ -138,12 +138,13 @@ email <a href="mailto:jeff@lareservices.com"><font color="#664E88">jeff@lareserv
   <tr>
     <td colspan="5"><table border="0" cellpadding="0" cellspacing="0">
         <tr>
-          <td bordercolor="664e88" bgcolor="664e88"><a href="lareserv.html" target="_top" onClick="MM_nbGroup('down','group1','about','images/aboutusyellow.jpg',1)" onMouseOver="MM_nbGroup('over','about','images/aboutusyellow.jpg','images/aboutusyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/aboutuswhite.jpg" alt="About Louisiana Real Estate Services" name="about" border="0" onload=""></a></td>
+          <td bordercolor="664e88" bgcolor="664e88"><img src='images/navbar_mt.jpg'/></td>
           <td><a href="propertymanagement.html" target="_top" onClick="MM_nbGroup('down','group1','propmanage','images/propmanageyellow.jpg',1)" onMouseOver="MM_nbGroup('over','propmanage','images/propmanageyellow.jpg','images/propmanageyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/propmanagewhite.jpg" alt="Property Management by Louisiana Real Estate Services" name="propmanage" width="155" height="32" border="0" onload=""></a></td>
           <td><a href="brokerageleasing.html" target="_top" onClick="MM_nbGroup('down','group1','brokerage','images/brokerageyellow.jpg',1)" onMouseOver="MM_nbGroup('over','brokerage','images/brokerageyellow.jpg','images/brokerageyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/brokerageyellow.jpg" alt="Brokerage & Leasing by Louisiana Real Estate Services" name="brokerage" border="0" onload=""></a></td>
           <td><a href="development.html" target="_top" onClick="MM_nbGroup('down','group1','development','images/developmentyellow.jpg',1)" onMouseOver="MM_nbGroup('over','development','images/developmentyellow.jpg','images/developmentyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/development.jpg" alt="Development by Louisiana Real Estate Services" name="development" width="111" height="32" border="0" onload=""></a></td>
           <td><a href="investment.html" target="_top" onClick="MM_nbGroup('down','group1','investment','images/investment-servicesyellow.jpg',1)" onMouseOver="MM_nbGroup('over','investment','images/investment-servicesyellow.jpg','images/investment-servicesyellow.jpg',1)" onMouseOut="MM_nbGroup('out')"><img src="images/investment-serviceswhite.jpg" alt="Investment Services by Louisiana Real Estate Services" name="investment" width="146" height="32" border="0" onload=""></a></td>
           <td><a href="javascript:;" onClick="MM_openBrWindow('http://www.lacdb.com/','','toolbar=yes,location=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=600')"><img src="images/propertylistings.jpg" alt="Property Listings with Louisiana Real Estate Services" name="proplistings" width="129" height="32" border="0"></a></td>
+          <td bordercolor="664e88" bgcolor="664e88"><img src='images/navbar_mt.jpg'/></td>
         </tr>
     </table></td>
   </tr>
@@ -170,10 +171,10 @@ email <a href="mailto:jeff@lareservices.com"><font color="#664E88">jeff@lareserv
     <td colspan="5">&nbsp;</td>
   </tr>
   <tr bgcolor="#664e88">
-    <td colspan="5"><div align="center"><span class="expanded style1">Copyright &copy;2007-2009 Louisiana Real Estate Services, LLC </span></div></td>
+    <td colspan="5"><div align="center"><span class="expanded style1">Copyright &copy;2021 Louisiana Real Estate Services, LLC </span></div></td>
   </tr>
   <tr bgcolor="#FFFFFF">
-    <td colspan="5"><div align="center"><a href="lareserv.html">about us</a> | <a href="propertymanagement.html">property management</a> | <a href="brokerageleasing.html">brokerage and leasing</a> | <a href="development.html">development</a> | <a href="investment.html">investment services</a> | <a href="javascript:;" onClick="MM_openBrWindow('http://www.lacdb.com/','','toolbar=yes,location=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=600')">property listings</a> </div></td>
+    <td colspan="5"><div align="center"><a href="propertymanagement.html">property management</a> | <a href="brokerageleasing.html">brokerage and leasing</a> | <a href="development.html">development</a> | <a href="investment.html">investment services</a> | <a href="javascript:;" onClick="MM_openBrWindow('http://www.lacdb.com/','','toolbar=yes,location=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=600')">property listings</a> </div></td>
   </tr>
 </table>
 </body>
